--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,11 +4,11 @@ on:
   push:
     branches: [ main, init ]
   pull_request:
-    branches: [ main, init ]
+    branches: [ main ]
 
 jobs:
-  test:
-
+  phpunit:
+    name: "PHPUnit ${{ matrix.php-version }}"
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -17,14 +17,14 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Install dependencies
+      - name: "Install dependencies with Composer"
         uses: php-actions/composer@v5
         with:
           php_version: ${{ matrix.php_version }}
           version: 2
           args: --profile --ignore-platform-reqs
 
-      - name: PHPUnit tests
+      - name: "Run PHPUnit"
         uses: php-actions/phpunit@v2
         with:
           php_version: ${{ matrix.php_version }}
@@ -32,4 +32,9 @@ jobs:
           version: 9.5
           configuration: tests/phpunit/phpunit.xml
           bootstrap: vendor/autoload.php
-          args: --coverage-text
+          args: --coverage-text=coverage.xml
+
+      - name: "Send coverage to Codecov"
+        uses: "codecov/codecov-action@v2"
+        with:
+          file: "coverage.xml"
