--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -7,7 +7,8 @@ on:
     branches: [ main, init ]
 
 jobs:
-  test:
+  php-coding-standard:
+    name: "PHP Coding Standard ${{ matrix.php-version }}"
 
     runs-on: ubuntu-latest
     strategy:
@@ -17,10 +18,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Validate composer.json and composer.lock
+      - name: 'Validate composer.json and composer.lock'
         run: composer validate
 
-      - name: Cache Composer packages
+      - name: 'Cache Composer packages'
         id: composer-cache
         uses: actions/cache@v2
         with:
@@ -29,14 +30,14 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-php-
 
-      - name: Install dependencies
+      - name: 'Install dependencies with Composer'
         uses: php-actions/composer@v5
         with:
           php_version: ${{ matrix.php_version }}
           version: 2
           args: --profile --ignore-platform-reqs
 
-      - name: PHPStan Static Analysis
+      - name: 'PHPStan Static Analysis'
         uses: php-actions/phpstan@v2
         with:
           configuration: tests/phpstan.neon
