--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,11 @@
     "doctrine/common": "^2.13 || ^3.0",
     "doctrine/event-manager": "^1.0",
     "doctrine/persistence": "^1.3.4 || ^2.0",
-    "symfony/validator": "^5.4"
+    "symfony/validator": "^5.4",
+    "symfony/dependency-injection": "^5.4",
+    "symfony/yaml": "^5.4",
+    "symfony/mailer": "^5.4",
+    "symfony/twig-bundle": "^5.4"
   },
   "conflict": {
     "doctrine/mongodb": "<1.3",
@@ -42,5 +46,12 @@
     "phpstan/phpstan-strict-rules": "^1.1",
     "phpunit/phpunit": "^9.5",
     "squizlabs/php_codesniffer": "^3.6"
+  },
+  "extra": {
+    "phpstan": {
+      "includes": [
+        "tests/extension.neon"
+      ]
+    }
   }
 }
