--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,8 @@
     "phpstan/phpstan-deprecation-rules": "^1.0",
     "phpstan/phpstan-strict-rules": "^1.1",
     "phpunit/phpunit": "^9.5",
-    "squizlabs/php_codesniffer": "^3.6"
+    "squizlabs/php_codesniffer": "^3.6",
+    "2lenet/crudit-bundle": "dev-main"
   },
   "extra": {
     "phpstan": {
