Add PHP Codesniffer to the CI

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -38,7 +38,7 @@ jobs:
           args: --profile --ignore-platform-reqs
 
       - name: 'PHP CodeSniffer Validations'
-        run: ~/.composer/vendor/bin/phpcs
+        run: /app/vendor/bin/phpcs
 
       - name: 'PHPStan Static Analysis'
         uses: php-actions/phpstan@v2
