--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,13 @@
     "doctrine/common": "^2.13 || ^3.0",
     "doctrine/event-manager": "^1.0",
     "doctrine/persistence": "^1.3.4 || ^2.0",
-    "symfony/validator": "^5.3",
-    "symfony/dependency-injection": "^5.3",
-    "symfony/yaml": "^5.3",
-    "symfony/mailer": "^5.3",
-    "symfony/twig-bundle": "^5.3",
-    "symfony/lock": "^5.3"
+    "symfony/validator": "^5.3 || ^6.0",
+    "symfony/dependency-injection": "^5.3 || ^6.0",
+    "symfony/yaml": "^5.3 || ^6.0",
+    "symfony/mailer": "^5.3 || ^6.0",
+    "symfony/twig-bundle": "^5.3 || ^6.0",
+    "symfony/lock": "^5.3 || ^6.0",
+    "2lenet/crudit-bundle": "*"
   },
   "conflict": {
     "doctrine/mongodb": "<1.3",
@@ -35,7 +36,7 @@
   },
   "require-dev": {
     "doctrine/cache": "^1.11 || ^2.0",
-    "doctrine/dbal": "^2.13",
+    "doctrine/dbal": "^2.13 || ^3.3.0",
     "doctrine/doctrine-bundle": "^2.3",
     "doctrine/orm": "^2.10.2",
     "phpstan/phpstan": "^1.2",
@@ -46,8 +47,7 @@
     "phpstan/phpstan-deprecation-rules": "^1.0",
     "phpstan/phpstan-strict-rules": "^1.1",
     "phpunit/phpunit": "^9.5",
-    "squizlabs/php_codesniffer": "^3.6",
-    "2lenet/crudit-bundle": "dev-main"
+    "squizlabs/php_codesniffer": "^3.6"
   },
   "extra": {
     "phpstan": {
