--- a/src/Resources/public/manifest.json
+++ b/src/Resources/public/manifest.json
@@ -5,5 +5,6 @@
   "bundles/hermes/img/hermes.svg": "./img/hermes.svg",
   "bundles/hermes/fonts/main-fonts.eot?v=20": "./fonts/main-fonts.b8dc4688.eot",
   "bundles/hermes/fonts/main-fonts.ttf?v=20": "./fonts/main-fonts.4d0a7659.ttf",
-  "bundles/hermes/fonts/main-fonts.woff?v=20": "./fonts/main-fonts.dbf9ed7d.woff"
+  "bundles/hermes/fonts/main-fonts.woff?v=20": "./fonts/main-fonts.dbf9ed7d.woff",
+  "bundles/hermes/img/pixel.png": "./img/pixel.png"
 }
