--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "doctrine/collections": "^1.0",
     "doctrine/common": "^2.13 || ^3.0",
     "doctrine/event-manager": "^1.0",
-    "doctrine/persistence": "^1.3.4 || ^2.0",
+    "doctrine/persistence": "^1.3.4 || ^2.0 || ^3.0",
     "symfony/validator": "^5.3 || ^6.0",
     "symfony/dependency-injection": "^5.3 || ^6.0",
     "symfony/yaml": "^5.3 || ^6.0",
