--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
         "mjml": "^4.12.0"
     },
     "devDependencies": {
-        "file-loader": "^6.2.0"
+        "file-loader": "^6.2.0",
+        "node-sass": "^9.0.0",
+        "sass-loader": "^13.3.2"
     }
 }
