--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
   "name": "2lenet/hermes-bundle",
+  "type": "symfony-bundle",
   "description": "Email sender library",
+  "homepage": "https://www.2le.net",
   "license": "MIT",
   "autoload": {
     "psr-4": {
@@ -15,6 +17,9 @@
   ],
   "require": {
     "php": "^7.4 || ^8.0",
+    "symfony/orm-pack": "*",
+    "symfony/framework-bundle": "^5.0|^6.0",
+    "twig/twig": "^3.4",
     "doctrine/annotations": "^1.13",
     "doctrine/collections": "^1.0",
     "doctrine/common": "^2.13 || ^3.0",
@@ -28,17 +33,7 @@
     "symfony/lock": "^5.3 || ^6.0",
     "2lenet/crudit-bundle": "*"
   },
-  "conflict": {
-    "doctrine/mongodb": "<1.3",
-    "doctrine/mongodb-odm": "<2.0",
-    "doctrine/orm": "<2.10.2",
-    "sebastian/comparator": "<2.0"
-  },
   "require-dev": {
-    "doctrine/cache": "^1.11 || ^2.0",
-    "doctrine/dbal": "^2.13 || ^3.3.0",
-    "doctrine/doctrine-bundle": "^2.3",
-    "doctrine/orm": "^2.10.2",
     "phpstan/phpstan": "^1.2",
     "phpstan/phpstan-mockery": "^1.0",
     "phpstan/phpstan-phpunit": "^1.0",
