--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,7 @@
     ],
     "require": {
         "php": "^7.4 || ^8.0",
-        "symfony/orm-pack": "*",
-        "symfony/framework-bundle": "^5.0|^6.0",
-        "twig/twig": "^3.4",
+        "2lenet/crudit-bundle": "*",
         "doctrine/annotations": "^1.13",
         "doctrine/collections": "^1.0",
         "doctrine/common": "^2.13 || ^3.0",
@@ -27,11 +25,14 @@
         "doctrine/persistence": "^1.3.4 || ^2.0 || ^3.0",
         "symfony/validator": "^5.3 || ^6.0",
         "symfony/dependency-injection": "^5.3 || ^6.0",
-        "symfony/yaml": "^5.3 || ^6.0",
-        "symfony/mailer": "^5.3 || ^6.0",
-        "symfony/twig-bundle": "^5.3 || ^6.0",
+        "symfony/framework-bundle": "^5.0|^6.0",
         "symfony/lock": "^5.3 || ^6.0",
-        "2lenet/crudit-bundle": "*"
+        "symfony/mailer": "^5.3 || ^6.0",
+        "symfony/orm-pack": "*",
+        "symfony/process": "^5.3 || ^6.0",
+        "symfony/twig-bundle": "^5.3 || ^6.0",
+        "symfony/yaml": "^5.3 || ^6.0",
+        "twig/twig": "^3.4"
     },
     "require-dev": {
         "phpstan/phpstan": "^1.2",
