--- a/composer.json
+++ b/composer.json
@@ -16,33 +16,33 @@
         }
     ],
     "require": {
-        "php": "^7.4 || ^8.0",
-        "symfony/orm-pack": "*",
-        "symfony/framework-bundle": "^5.0|^6.0",
-        "twig/twig": "^3.4",
-        "doctrine/annotations": "^1.13",
+        "php": "^8.0",
+        "2lenet/crudit-bundle": "*",
         "doctrine/collections": "^1.0",
         "doctrine/common": "^2.13 || ^3.0",
         "doctrine/event-manager": "^1.0",
-        "doctrine/persistence": "^1.3.4 || ^2.0 || ^3.0",
-        "symfony/validator": "^5.3 || ^6.0",
-        "symfony/dependency-injection": "^5.3 || ^6.0",
-        "symfony/yaml": "^5.3 || ^6.0",
-        "symfony/mailer": "^5.3 || ^6.0",
-        "symfony/twig-bundle": "^5.3 || ^6.0",
-        "symfony/lock": "^5.3 || ^6.0",
-        "2lenet/crudit-bundle": "*"
+        "doctrine/persistence": "^3.0",
+        "symfony/validator": "^6.0",
+        "symfony/dependency-injection": "^6.0",
+        "symfony/framework-bundle": "^6.0",
+        "symfony/lock": "^6.0",
+        "symfony/mailer": "^6.0",
+        "symfony/orm-pack": "*",
+        "symfony/process": "^6.0",
+        "symfony/twig-bundle": "^6.0",
+        "symfony/yaml": "^6.0",
+        "twig/twig": "^3.4"
     },
     "require-dev": {
-        "phpstan/phpstan": "^1.2",
-        "phpstan/phpstan-mockery": "^1.0",
-        "phpstan/phpstan-phpunit": "^1.0",
-        "phpstan/phpstan-symfony": "^1.0",
-        "phpstan/phpstan-doctrine": "^1.0",
-        "phpstan/phpstan-deprecation-rules": "^1.0",
+        "phpstan/phpstan": "^1.9",
+        "phpstan/phpstan-mockery": "^1.1",
+        "phpstan/phpstan-phpunit": "^1.3",
+        "phpstan/phpstan-symfony": "^1.2",
+        "phpstan/phpstan-doctrine": "^1.3",
+        "phpstan/phpstan-deprecation-rules": "^1.1",
         "phpstan/phpstan-strict-rules": "^1.1",
-        "phpunit/phpunit": "^9.5",
-        "squizlabs/php_codesniffer": "^3.6"
+        "phpunit/phpunit": "^10.3",
+        "squizlabs/php_codesniffer": "^3.6",
     },
     "extra": {
         "phpstan": {
