--- a/package.json
+++ b/package.json
@@ -30,10 +30,7 @@
     },
     "homepage": "https://github.com/2lenet/HermesBundle#readme",
     "dependencies": {
-        "@symfony/webpack-encore": "^1.7.0",
-        "grapesjs": "^0.17.29",
-        "grapesjs-mjml": "^0.5.8",
-        "mjml": "^4.12.0"
+        "@symfony/webpack-encore": "^1.7.0"
     },
     "devDependencies": {
         "file-loader": "^6.2.0",
