--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
-/docker-compose.yaml
-/Dockerfile
-/.idea
-
 /vendor/
 /.phpcs-cache
 /phpunit.report.xml
 /tests/phpunit/.phpunit.result.cache
 /.phpunit.result.cache
-node_modules
+/node_modules/
