--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "doctrine/collections": "^1.0",
         "doctrine/common": "^2.13 || ^3.0",
         "doctrine/event-manager": "^1.0",
-        "doctrine/persistence": "^3.0",
+        "doctrine/persistence": "^2.0 || ^3.0",
         "symfony/validator": "^6.0",
         "symfony/dependency-injection": "^6.0",
         "symfony/framework-bundle": "^6.0",
