--- a/.github/workflows/.phpunit.yml
+++ b/.github/workflows/.phpunit.yml
@@ -31,5 +31,5 @@ jobs:
                     php_version: ${{ matrix.php_version }}
                     php_extensions: xdebug
                     version: 10.3
-                    configuration: tests/phpunit/phpunit.xml
+                    configuration: tests/phpunit.xml
                     bootstrap: vendor/autoload.php
