--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {
         "php": "^8.0",
         "ext-imap": "*",
-        "2lenet/crudit-bundle": "*",
+        "2lenet/crudit-bundle": "^1.5.11",
         "doctrine/collections": "^1.0",
         "doctrine/common": "^2.13 || ^3.0",
         "doctrine/event-manager": "^1.0",
