Add SF7 compatibility

--- a/composer.json
+++ b/composer.json
@@ -23,14 +23,14 @@
         "doctrine/common": "^2.13 || ^3.0",
         "doctrine/event-manager": "^1.0",
         "doctrine/persistence": "^2.0 || ^3.0",
-        "symfony/validator": "^6.0",
-        "symfony/dependency-injection": "^6.0",
-        "symfony/framework-bundle": "^6.0",
-        "symfony/lock": "^6.0",
-        "symfony/mailer": "^6.0",
+        "symfony/validator": "^6.0 || ^7.0",
+        "symfony/dependency-injection": "^6.0 || ^7.0",
+        "symfony/framework-bundle": "^6.0 || ^7.0",
+        "symfony/lock": "^6.0 || ^7.0",
+        "symfony/mailer": "^6.0 || ^7.0",
         "symfony/orm-pack": "*",
-        "symfony/twig-bundle": "^6.0",
-        "symfony/yaml": "^6.0",
+        "symfony/twig-bundle": "^6.0 || ^7.0",
+        "symfony/yaml": "^6.0 || ^7.0",
         "twig/twig": "^3.4"
     },
     "require-dev": {
