--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "2lenet/crudit-bundle": "^1.5.11",
         "doctrine/collections": "^1.0 || ^2.0",
         "doctrine/common": "^2.13 || ^3.0",
-        "doctrine/event-manager": "^1.0",
+        "doctrine/event-manager": "^1.0 || ^2.0",
         "doctrine/persistence": "^2.0 || ^3.0",
         "friendsofsymfony/ckeditor-bundle": "^2.5",
         "symfony/validator": "^6.0 || ^7.0",
