--- a/tests/phpstan.neon
+++ b/tests/phpstan.neon
@@ -1,15 +1,18 @@
 includes:
-  - ../vendor/phpstan/phpstan-phpunit/extension.neon
-  - ../vendor/phpstan/phpstan-mockery/extension.neon
-  - ../vendor/phpstan/phpstan-symfony/extension.neon
-  - ../vendor/phpstan/phpstan-symfony/rules.neon
-  - ../vendor/phpstan/phpstan-doctrine/extension.neon
-  - ../vendor/phpstan/phpstan-deprecation-rules/rules.neon
+    - ../vendor/phpstan/phpstan-phpunit/extension.neon
+    - ../vendor/phpstan/phpstan-mockery/extension.neon
+    - ../vendor/phpstan/phpstan-symfony/extension.neon
+    - ../vendor/phpstan/phpstan-symfony/rules.neon
+    - ../vendor/phpstan/phpstan-doctrine/extension.neon
+    - ../vendor/phpstan/phpstan-deprecation-rules/rules.neon
 
 parameters:
-  level: 8
-  paths:
-    - ../src
-    - ../tests
-  checkMissingIterableValueType: false
-  checkGenericClassInNonGenericObjectType: false
+    level: 8
+    paths:
+        - ../src
+        - ../tests
+    ignoreErrors:
+            -
+                identifier: missingType.iterableValue
+            -
+                identifier: missingType.generics
